--- a/liebe_html/css/style.css
+++ b/liebe_html/css/style.css
@@ -641,18 +641,18 @@ nav.navbar.shrink ul.dropdown-menu>li>a {
 
 /* =========================== Save the date ============================ */
 
-#countdown {
+#timer {
     font-size: 40px;
     line-height: 42px;
     font-family: Playfair Display;
     font-style: italic;
     font-weight: 400;
 }
-#countdown .count {
+#timer .count {
     display: inline-block;
     margin: 0px 30px;
 }
-#countdown .displayformat {
+#timer .displayformat {
     font-size: 20px;
     font-style: normal;
     font-family: Playfair Display;
